# Avant-Garde

./: .clangd  .gitattributes  .gitignore  Avant-Garde.vcxproj  Avant-Garde.vcxproj.filters  AvantGarde.vcxproj  AvantGarde.vcxproj.filters  LICENSE  Makefile  README.md  VulkenProject.vcxproj  main.cpp
Mac/: .gitignore  CMakeLists.txt
OS/MacOS/: CMakeLists.txt  build.sh
dev/: CMakeLists.txt  build_unix.sh  setup-env.sh  setup_env.sh
shaders/: compile-shaders.bat  compile-shaders.sh
src/: config.h  main.cpp  test.cpp
src/controller/: app.cpp  app.h
src/model/: scene.cpp  scene.h
src/render/: AvantGardeRender.hpp  drawing.cpp  mainLoop.cpp  pipeline.cpp  pipline.cpp  presentation.cpp  setupVulkan.cpp  textureMapping.cpp
src/renderer/shaders/: compile-shaders.bat  shader.vert
src/renderer/vulkan/: AvantGardeRender.hpp  drawing.cpp  mainLoop.cpp
src/shaders/: compile-shaders.sh  shader.vert
src/view/: engine.cpp  engine.h
src/view/vkInit/: instance.h
src1/: README.md  main.cpp
src1/engine/: config.h  engine.cpp  engine.h  instance.h
src_old/: main.cpp
src_old/render/: AvantGardeRender.hpp
src_reference/: README.md  config.h  main.cpp
src_reference/control/: app.cpp  app.h  logging.cpp  logging.h
src_reference/model/: scene.cpp  scene.h  vertex_menagerie.cpp  vertex_menagerie.h
src_reference/shader/: compile.bat
src_reference/view/: engine.cpp  engine.h
src_reference/view/vkInit/: commands.h  descriptors.h  device.h  framebuffer.h  instance.h  pipeline.h  swapchain.h  sync.h
src_reference/view/vkMesh/: mesh.h
src_reference/view/vkUtil/: frame.h  memory.cpp  memory.h  queue_families.h  render_structs.h  shaders.h
